<resources>
    <string name="app_name">Loopd</string>
	<string name="version">1.0</string>
    <string name="versionName">Aardvark</string>
 	<string name="build">110</string>
	<string name="namespace">com.riotapps.loopd</string>
	<string name="wordnik_apiKey">48f31f368d20791114b01067e1d05b68ca177aabdbab4150b</string>
    <string name="chartboost_app_id">53160b0d2d42da7e0a8abd0c</string>
    <string name="chartboost_app_signature">f51b10ec91823264e06e9cc5c44e0b69b2c85d74</string>
    <string name="IAB_1">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8</string>
	<string name="IAB_2">AMIIBCgKCAQEAlBIwQuDnuhgVuFLgheCrB7</string>
	<string name="IAB_3">xytZKBuHhm3pG/er4QosMn6z4cwTp3</string>
	<string name="IAB_4">gmmZz0vzTO0Cv7GzYgTUT+CrYAcgFp</string>
	<string name="IAB_5">GKAdnGKL/nzD7IGc9NnckV/5t+kqLHnSQY</string>
	<string name="IAB_6">4wS9d6jRKg4YiM9dk8ozK2NjHwwP/4</string>
	<string name="IAB_7">gaVqEnoGRIRiF8WPKXDTk923Wt7al8</string>
	<string name="IAB_8">dGhtJcH9cb9LYUU+G1BCn//Y7A</string>
	<string name="IAB_9">zm9pcX69urLUpO8aDpnQPr7TWBWSp</string>
	<string name="IAB_10">6g1i2vnp1iFmj++NZV0dbrGtrYTiit</string>
	<string name="IAB_11">NCx4tzeYIimCsQj3gL1fRPqzgeTQvNP</string>
	<string name="IAB_12">2/Tvdm2WOzxBtKBXm5TLQn+A8GanIP</string>
	<string name="IAB_13">iEAwSJGLARaCEi+K7ZRwIDAQAB</string>
	<string name="SKU_GOOGLE_PLAY_PREMIUM_UPGRADE">riotapps_loopd_premium_upgrade.a</string>
	<string name="admob_pub_id_game_surface">ca-app-pub-7811514377323585/9490104351</string>
	<string name="admob_pub_id_full_rules">ca-app-pub-7811514377323585/6536637953</string>
 	<string name="admob_pub_id_about">ca-app-pub-7811514377323585/3583171551</string>
	<string name="game_surface_played_words">played words</string>
	<string name="scoreboard_countdown_start">4:08</string>
	<string name="scoreboard_countdown">%1$s:%2$s</string>
 	<string name="scoreboard_countdown_completed">0:00</string>
	<string name="button_play_word_1">PLAY\nWORD 1</string>
	<string name="button_play_word_2">PLAY\nWORD 2</string>
	<string name="button_play_word_3">PLAY\nWORD 3</string>
	<string name="game_surface_played_word_contains_spaces">no spaces allowed within the word</string>
	<string name="game_surface_played_word_too_short">words must be at least 2 letters long</string>
	<string name="game_surface_played_word_already_played">%s has already been played</string>
	<string name="game_surface_played_word_invalid">%s is an invalid word</string>
	<string name="game_surface_played_word_1">WORD 1</string>
	<string name="game_surface_played_word_2">WORD 2</string>
	<string name="game_surface_played_word_3">WORD 3</string>
	<string name="game_surface_countdown">countdown:</string>
	<string name="game_surface_score">score</string>
	<string name="game_surface_top_score">top score</string>
	<string name="store_item_premium_upgrade_description">Enjoy the purest Loopd experience. No more third party ads at all.  Ever.  Woohoo!!</string>
	<string name="main_menu_about">About Loopd</string>
	<string name="about_device_specs">This device is %1$s size with %2$s resolution.</string>
	<string name="about_main">Loopd by RiotApps</string>
	<string name="share_subject">Loopd for Android</string>
	<string name="share_message">Check out Loopd for Android in the Google Play store.  Test your word building skills as the letters snake by.  How many words can you build???</string>
	<string name="full_rules_1">The idea is to score as many points as you possibly can by building words (the longer the better) before the countdown is completed.</string>
	<string name="full_rules_2">To start the game, just tap the Start button.  That kicks off the 4 minute 8 second countdown timer. The three words will be preset for you with letters or word fragments.  Your job is to determine what words can be formed from each fragment using the letter tiles from the hopper that are scrolling by in the bottom area.  </string>
	<string name="full_rules_3">The top row of the scrolling hopper is used for Word 1.  The middle row is used for Word 2.  The bottom row is used for Word 3.  As you tap letter tiles in the scrolling hopper, those letters are added to the left-most empty tile of the particular word for the row the tapped tile belonged to.</string>
	<string name="full_rules_4">If you make a mistake and want to remove a letter from a word, just tap that letter\'s tile and it will be removed - except for the preset letters in the word fragment which cannot be changed.</string>
	<string name="full_rules_5">No formal words or hyphenated words are allowed. Words can be from 2 to 10 letters long.</string>
	<string name="full_rules_6">After you build a word (for example, Word 1), just tap the "Play" button at the bottom corresponding to that word (in our example, tap the "Play Word 1" button). A specific word can only be played once per game.</string>
	<string name="full_rules_7">Remember to tap the letters in the scrolling hopper to add them to the played word.  Don\'t drag them, it does not work.  The game was built for pure finger-tapping speed. Letters can ony be used once per \'row scroll\' but after that they can be used again.</string>
	<string name="full_rules_letters_1">THE LETTERS</string>
	<string name="full_rules_letters_2">102 letters are added to the hopper, shuffled, and continuously scroll around 3 rows.  The mix of the 102 letters is as follows:</string>
   <string name="full_rules_letter1_num">A - 8</string>
	<string name="full_rules_letter2_num">B - 2</string>
	<string name="full_rules_letter3_num">C - 2</string>
	<string name="full_rules_letter4_num">D - 4</string>
	<string name="full_rules_letter5_num">E - 12</string>
	<string name="full_rules_letter6_num">F - 2</string>
	<string name="full_rules_letter7_num">G - 2</string>
	<string name="full_rules_letter8_num">H - 4</string>
	<string name="full_rules_letter9_num">I - 8</string>
	<string name="full_rules_letter10_num">J - 1</string>
	<string name="full_rules_letter11_num">K - 2</string>
	<string name="full_rules_letter12_num">L - 4</string>
	<string name="full_rules_letter13_num">M - 2</string>
	<string name="full_rules_letter14_num">N - 6</string>
	<string name="full_rules_letter15_num">O - 8</string>
	<string name="full_rules_letter16_num">P - 2</string>
	<string name="full_rules_letter17_num">Q - 1</string>
	<string name="full_rules_letter18_num">R - 6</string>
	<string name="full_rules_letter19_num">S - 5</string>
	<string name="full_rules_letter20_num">T - 9</string>
	<string name="full_rules_letter21_num">U - 4</string>
	<string name="full_rules_letter22_num">V - 2</string>
	<string name="full_rules_letter23_num">W - 2</string>
	<string name="full_rules_letter24_num">X - 1</string>
	<string name="full_rules_letter25_num">Y - 2</string>
	<string name="full_rules_letter26_num">Z - 1</string>
	<string name="full_rules_dictionary_1">THE DICTIONARY</string>
	<string name="full_rules_scoring_1">SCORING</string>
	<string name="full_rules_scoring_2">Scoring is simple and mostly based on the length of the played word. Letters 1 - 3 of a word are worth 1 point each.  Letters 4 - 6 are worth 3 points each.  Letters 7 - 9 are worth 5 points each.  Letter 10 is worth 10 points. </string>
	<string name="full_rules_scoring_3">So, for example, if you played the word KNUCKLES, it would be worth 22 points. 1 point each for "K", "N", and "U".  Then 3 points each for "C", "K", and "L".  Finally, "E" and "S", being letters 7 and 8, would be worth 5 points each.</string>
	<string name="full_rules_scoring_4">By contrast, the word "FLY", which only contains letters 1, 2, and 3, is only worth 3 points. As you can see, the longer the word, the more points you will earn for a particular word.</string>
	<string name="full_rules_scoring_5">In addition, if there are blank tiles to the left of the preset tiles, you\'ll earn 2 points for each of them if you play that particular word.</string>
	<string name="full_rules_scoring_6">Also, an occasional Bonus +10 tile will scroll across among the other tiles.  If you are able to use the bonus letter in a word, 10 points is added to the word.  In fact, if you get really lucky and can use more than one bonus letter in a word, 10 points is added to the word for each bonus letter used.</string>
	<string name="full_rules_scoring_7">For example, in the "FLY" example above, if the "Y" had been from a Bonus +10 tile, the word would have been worth 13 points as opposed to 3.</string>
	<string name="full_rules_scoring_8">Finally, the points from each word played are added together to arrive at the score for the game. </string>
		 <string name="game_surface_game_over">Game Over</string>
	 <string name="game_surface_interstital_purchase_title">get rid of ads?</string>
	 <string name="game_surface_interstital_purchase_text">Want to get rid of ads between games?  No problem.  Just get a Premium Upgrade or a No Ads Between Games Upgrade.</string>
	 <string name="game_surface_start_game_ready">READY&#8230;</string>
	 <string name="game_surface_start_game_set">SET&#8230;</string>
	 <string name="game_surface_start_game_go">GO!!!</string>
	<string name="game_surface_first_time_alert_message">Tap on scrolling letters to form words in the corresponding rows.  Tap "Play" as you complete each word to add it to your score.  Get as high a score as you can!\n\nTap the 3 dots in the top right to review all of the game rules.</string>
	 <string name="game_completed_first_time_title">First game down!</string>
	 <string name="game_completed_first_time_message">Now the idea is to keep trying to raise your top score!</string>
	 <string name="game_completed_new_top_score_title">Yes!</string>
	 <string name="game_completed_new_top_score_message">A new top score!</string>
	 <string name="game_completed_new_top_score_in_x_games_title">Congratulations!</string>
	 <string name="game_completed_new_top_score_in_x_games_message">Your first new top score in %s games!</string>
	 <string name="game_completed_tied_top_score_title">Well done!</string>
	 <string name="game_completed_tied_top_score_message">You tied your top score!</string>
	 <string name="game_completed_since_last_top_score_title">Keep trying!</string>
	 <string name="game_completed_since_last_top_score_message">It\'s been %s games since your last top score!</string>
	 <string name="game_completed_within_10_top_score_title">So close!</string>
	 <string name="game_completed_within_10_top_score_message">You\'re not far from a new top score!</string>
	 <string name="game_completed_within_3_top_score_title">Almost!</string>
	 <string name="game_completed_within_3_top_score_message">So close to your top score!</string>
	 <string name="game_completed_no_top_score_title_1">Keep at it!</string>
	 <string name="game_completed_no_top_score_message_1">Your new top score could only be a game away!</string>
	 <string name="game_completed_no_top_score_title_2">Don\'t give up!</string>
	 <string name="game_completed_no_top_score_message_2">Another game is waiting.  Your top score is calling!</string>
	 <string name="game_completed_no_top_score_title_3">Not bad!</string>
	 <string name="game_completed_no_top_score_message_3">Keep pushing to get a new top score!</string>
	 <string name="game_completed_no_top_score_title_4">Keep it up!</string>
	 <string name="game_completed_no_top_score_message_4">A new top score is within your reach!</string>
	 <string name="game_completed_no_top_score_title_5">Keep at it!</string>
	 <string name="game_completed_no_top_score_message_5">Your new top score could only be a game away!</string>
	 <string name="game_completed_no_top_score_title_6">Keep at it!</string>
	 <string name="game_completed_no_top_score_message_6">Your new top score could only be a game away!</string>
	 <string name="game_completed_no_top_score_title_7">Keep at it!</string>
	 <string name="game_completed_no_top_score_message_7">Your new top score could only be a game away!</string>
	 <string name="game_completed_no_top_score_title_8">Keep at it!</string>
</resources>