<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    style="@style/GameboardLayoutStyle" 
    android:orientation="vertical"
	>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<include android:id="@+id/topAreaLayout" layout="@layout/toparealayout" />

	
     <LinearLayout  
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:id="@+id/rlWordLists"
        style="@style/GameboardListAreaStyle"
		 >
		<RelativeLayout
		     android:layout_weight="1"
		     android:layout_height="fill_parent"
		     android:layout_width="wrap_content"
		     >
		    <TextView
			    android:id="@+id/tvCountdown"
			    style="@style/CountdownTextStyle" 
			    android:text="@string/scoreboard_countdown_start"
			/>
		    <TextView
			    android:id="@+id/tvCountdownLabel"
			    style="@style/CountdownLabelTextStyle" 
			    android:text="@string/game_surface_countdown"
			    android:layout_toLeftOf="@id/tvCountdown"
			   
			    android:layout_alignBaseline="@id/tvCountdown"
			/>
	 	    <TextView
	 	        android:layout_below="@id/tvCountdown"
			    android:id="@+id/tvScore"
			    style="@style/CountdownTextStyle" 
			/>
	 	    <TextView
			    android:id="@+id/tvScoreLabel"
			    android:text="@string/game_surface_score" 
			    android:layout_toLeftOf="@id/tvScore"
			    style="@style/CountdownLabelTextStyle" 
			    android:layout_alignBaseline="@id/tvScore" 
			/>
	 	    <TextView
	 	        android:layout_below="@id/tvScore"
			    android:id="@+id/tvTopScore"
			    style="@style/CountdownTextStyle" 
			/>  
			<TextView
			    android:id="@+id/tvTopScoreLabel"
			    android:text="@string/game_surface_top_score" 
			    android:layout_toLeftOf="@id/tvTopScore"
			    style="@style/CountdownLabelTextStyle" 
			    android:layout_alignBaseline="@id/tvTopScore"
			/>
       	</RelativeLayout>
       	<LinearLayout
       	    style="@style/ListSeparatorStyle"
       	>
       	</LinearLayout>
       		<LinearLayout
       		    android:id="@+id/llStart"
        	    android:layout_weight="1"
        	    android:orientation="vertical"
        	    android:layout_height="fill_parent"
        	    android:background="@color/word_list_area_player_background"
        	    android:gravity="center"
        	    >
			<ImageView 
			    android:id="@+id/ivStart"
				android:src="@drawable/start"
				style="@style/StartButtonStyle"
			/>
			</LinearLayout>
        	<LinearLayout
        	    android:id="@+id/llPlayedWords"
        	    android:layout_weight="1"
        	    android:orientation="vertical"
        	    android:layout_height="fill_parent"
        	    android:background="@color/word_list_area_player_background"
        	    >
		 	     <TextView 
			         android:id="@+id/tvPlayerWordListTitle"
			         style="@style/WordListTitleStyle"
			         android:text="@string/game_surface_played_words"
			         />
	     		<ListView 
				    android:layout_width="fill_parent"
	       			android:id="@+id/lvPlayedWords" 
	       			android:layout_height="fill_parent" 
	       			
	       			
	        	/>
     		</LinearLayout>
     		
			
    	</LinearLayout>
    <View style="@style/ScoreboardSeparatorStyle" />
         
	<RelativeLayout
	    android:layout_below="@id/topAreaLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"  
	    android:layout_marginTop="8dp"
	     
	 >
         <TextView 
             android:id="@+id/tvPlayedWord1Title"
		 	android:text="@string/game_surface_played_word_1"
		 	style="@style/PlayedWordTileSetTitleStyle"
		 />
		 <LinearLayout
		     android:layout_below="@id/tvPlayedWord1Title"
	         android:id="@+id/llRow1PlayedWord"
			style="@style/PlayedWordTileSetStyle"
	       >
	     
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter1"
		        android:layout_marginRight="1dp"	
		        android:gravity="center"        
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter2"
		        android:layout_marginRight="1dp"	       
		        android:gravity="center" 
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter3"
		        android:layout_marginRight="1dp"
		        android:gravity="center"	        
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter4"
		        android:layout_marginRight="1dp"	       
		        android:gravity="center" 
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter5"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />	
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter6"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter7"
		        android:layout_marginRight="1dp"
		        android:gravity="center"	        
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter8"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter9"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow1PlayedLetter10"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />								
		</LinearLayout>
		<TextView 
		    android:layout_below="@+id/llRow1PlayedWord"
		    android:id="@+id/tvPlayedWord2Title"
		 	android:text="@string/game_surface_played_word_2"
		 	style="@style/PlayedWordTileSetTitleStyle"
		 />
		<LinearLayout
	         android:id="@+id/llRow2PlayedWord"
	         android:layout_below="@+id/tvPlayedWord2Title"
		     style="@style/PlayedWordTileSetStyle"
	       >
	     
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter1"
		        android:layout_marginRight="1dp"	
		        android:gravity="center"        
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter2"
		        android:layout_marginRight="1dp"	       
		        android:gravity="center" 
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter3"
		        android:layout_marginRight="1dp"
		        android:gravity="center"	        
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter4"
		        android:layout_marginRight="1dp"	       
		        android:gravity="center" 
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter5"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />	
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter6"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter7"
		        android:layout_marginRight="1dp"
		        android:gravity="center"	        
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter8"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter9"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow2PlayedLetter10"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />								
		</LinearLayout>
		<TextView 
		    android:layout_below="@+id/llRow2PlayedWord"
		    android:id="@+id/tvPlayedWord3Title"
		 	android:text="@string/game_surface_played_word_3"
		 	style="@style/PlayedWordTileSetTitleStyle"
		 />
		<LinearLayout
	         android:id="@+id/llRow3PlayedWord"
	         android:layout_below="@+id/tvPlayedWord3Title"
		     style="@style/PlayedWordTileSetStyle"
	       >
	     
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter1"
		        android:layout_marginRight="1dp"	
		        android:gravity="center"        
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter2"
		        android:layout_marginRight="1dp"	       
		        android:gravity="center" 
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter3"
		        android:layout_marginRight="1dp"
		        android:gravity="center"	        
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter4"
		        android:layout_marginRight="1dp"	       
		        android:gravity="center" 
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter5"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />	
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter6"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter7"
		        android:layout_marginRight="1dp"
		        android:gravity="center"	        
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter8"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter9"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />
			<TextView  
		  	    android:id="@+id/ivRow3PlayedLetter10"
		        android:layout_marginRight="1dp"	        
		        android:gravity="center"
		    />								
		</LinearLayout>
				 
    <View 
        android:visibility="gone"
        android:layout_below="@+id/llRow3PlayedWord"
        style="@style/ScoreboardSeparatorStyle" />
						 
    	<com.rozen.wordscroll.ui.GameSurfaceView
    	   android:layout_below="@id/llRow3PlayedWord"
        	android:id="@+id/gameSurface"
        	android:layout_margin="0dp"
        	android:background="@null"
        />
    
    </RelativeLayout>
    	<LinearLayout
	     android:id="@+id/llButtons"
        style="@style/GameBoardButtonAreaStyle">

	
    <Button 
  	    style="@style/GameBoardSecondaryButtonStyle"
  	    android:id="@+id/bPlay1"
        android:layout_width="0dp" 
        android:layout_weight="1.0"
        android:text="@string/button_play_word_1"
     
    />
      <Button 
        style="@style/GameBoardSecondaryButtonStyle"
        android:id="@+id/bPlay2"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:text="@string/button_play_word_2"
    />

   <Button
        style="@style/GameBoardSecondaryButtonStyle"
        android:id="@+id/bPlay3"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:text="@string/button_play_word_3"
    />
    </LinearLayout>
    <LinearLayout 	
		    android:id="@+id/llAdWrapper"
		    style="@style/GameBoardAdAreaStyle">
		 <View
		     android:id="@+id/vBottomFill"
		     style="@style/GameBoardBottomFillStyle"
		     android:visibility="gone"
		     />	    
		 <com.google.ads.AdView  
          android:id="@+id/adView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           ads:adUnitId="@string/admob_pub_id_game_surface"
           android:layout_centerHorizontal="true" 
           ads:adSize="SMART_BANNER"
           ads:testDevices="TEST_EMULATOR"
           ads:loadAdOnCreate="false"/>
	   
	</LinearLayout>
	    </LinearLayout>
</LinearLayout>